# GCodeHopper

./: GCodeHopper Structure.drawio  LICENSE  Readme.md  environment.yml  pyproject.toml
diagrams/: GCodeHopper Structure.drawio
example_gcode/: Body1.gcode  DND AXE.gcode  File_Handle.gcode
src/gcodehopper/basemodel/: __init__.py  basemodel.py
src/gcodehopper/encoded_representation/: encoded_representation.py  representation_state.py  state_parameters.py  state_updater.py  tool_parameters.py
src/gcodehopper/encoded_representation/actions/: __init__.py  abstract_action.py  move_action.py  set_bed_temperature_action.py  set_coordinates_action.py  set_extrusion_type_action.py  set_tool_position_action.py  set_tool_temperature_action.py
src/gcodehopper/enums/: __init__.py  action_types.py  coordinates.py  extrusion_types.py  gcode_commands.py  log_levels.py  planes.py  state_types.py  units.py
src/gcodehopper/gcode_parsing/: action_factory.py  comment_parser.py  gcode_line.py
